--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,21 +4,26 @@ body {
 }
 
 .head {
-  width: 1000px;
+  width: 1200px;
   background-color: #e5e5e5;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
   color: #ffffff;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
-  margin: 0 auto;
+  margin: auto;
+}
+
+.header {
+  margin-left: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .head_title {
   color: #fb6d3a;
+  margin-left: 40px;
 }
 
 .header_list {
@@ -294,6 +299,12 @@ body {
     margin: auto;
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .head {
+    font-size: 80%;
+    width: auto;
+    margin: 0%;
   }
 
   .sidebar {
