--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,9 @@ body {
 
 .head {
   width: 1200px;
-  background-color: #e5e5e5;
+  background-color: #1e2939;
   color: #ffffff;
+  text-align: center;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -18,7 +19,7 @@ body {
   margin-left: 40px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: start;
 }
 
 .head_title {
@@ -27,12 +28,18 @@ body {
 }
 
 .header_list {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header_item {
   display: inline;
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 
 .header_text {
-  color: #000000;
+  color: #ffffff;
 }
 
 /* main styles */
@@ -45,6 +52,7 @@ body {
 
 /* main content styles */
 .main_content {
+  flex-grow: 1;
   background-color: #ffffff;
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
   padding: 105px 90px;
@@ -96,11 +104,6 @@ body {
   line-height: 27px;
   color: #000000;
   margin-bottom: 10px;
-}
-
-.projects_list {
-  padding: 0;
-  margin-left: 15px;
 }
 
 .project_item {
@@ -171,7 +174,7 @@ body {
   color: #000000;
 }
 
-.work_list {
+.list {
   padding: 0;
   margin-left: 15px;
 }
@@ -210,12 +213,13 @@ body {
 /* sidebar styles */
 .sidebar {
   background-color: #1e2939;
-  padding-top: 40px;
-  margin-left: 40px;
+  /* padding-top: 40px; */
+  /* margin-left: 40px; */
 }
 .photo {
   width: 370px;
   margin-bottom: 50px;
+  /* border-radius: 10%; */
 }
 
 .contacts,
@@ -250,20 +254,20 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  color: #48515d;
+  color: #ffffff;
 }
 
-.tech_skills_list {
+.skills_list {
   color: #ffffff;
   padding: 0;
   margin-left: 17px;
 }
 
-.tech_skills_item {
+.skills_item {
   color: #fb6d3a;
 }
 
-.tech_skills_text {
+.skills_text {
   color: #ffffff;
   font-style: normal;
   font-weight: 400;
@@ -274,23 +278,6 @@ body {
 .soft {
   margin-left: 40px;
   margin-top: 45px;
-}
-
-.soft_skills_list {
-  padding: 0;
-  margin-left: 17px;
-}
-
-.soft_skills_item {
-  color: #fb6d3a;
-}
-
-.soft_skills_text {
-  color: #ffffff;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
 }
 
 @media screen and (max-width: 479px) {
