--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,7 +241,7 @@ body {
 }
 
 .contact_type {
-  color: #ffffff;
+  color: #fb6d3a;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
